--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@ body ,ul, text, a{
     list-style: none;
     text-decoration: none;
     font-family: sans-serif;
-    background: rgb(19, 18, 18);
     font-size: 20px;
+}
+body{
+    background: rgb(0, 0, 0);
 }
 .header-site{
     height: 60px;
     align-items: center;
-    background: black;
+    background: rgb(22, 22, 22);
     display: flex;
     justify-content: space-between;
 }
@@ -18,14 +20,14 @@ body ,ul, text, a{
     display: flex;
     gap: 20px;
     margin: 20px;
-    background: black;
+    background: rgb(22, 22, 22);
     
 }
 .menu li a:hover{
     background: rgb(56, 54, 54);
 }
 .logo{
-    margin: 8px;
+    margin: 20px;
 }
 .login{
     background-image: linear-gradient(to top,rgba(0, 0, 0, 0.342),rgba(53, 53, 53, 0.644));
@@ -71,4 +73,13 @@ body ,ul, text, a{
 }
 .login button:hover{
     background: rgb(66, 66, 66);
+}
+@media (max-width: 600px) {
+    body ,ul, text, a{
+        font-size: 15px;
+    }
+    .login{
+        margin-left: 23%;
+        margin-top: 15%;
+    }
 }
